--- a/style_student.css
+++ b/style_student.css
@@ -13,7 +13,7 @@
 		<div id="outer_div">
 			<div id="middle_div">
 				<div class="subheader_div">
-					<h2>YOUR NAME: PROJECT TITLE here</h2>
+					<h2>Ian Davila: SR Assistant</h2>
 					<img src="profile_pic.jpg" width="150">
 				</div>
 				<div id="inside_div"> 
