--- a/style_student.css
+++ b/style_student.css
@@ -14,7 +14,7 @@
 			<div id="middle_div">
 				<div class="subheader_div">
 					<h2>Ian Davila: SR Assistant</h2>
-					<img src="profile_pic.JPG" width="150">
+					<img src="profile_pic.jpg" width="150">
 				</div>
 				<div id="inside_div"> 
 					<p>
